# notepad-plus-plus

./: .gitignore  BUILD.md  BUILD_LINUX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PORTING_STATUS.md  README.md  RELEASE_NOTES.md  REPO_INFO.md  SUPPORTED_SYSTEM.md  notepad-plus-plus.desktop
lexilla/access/: LexillaAccess.h
lexilla/lexers/: LexA68k.cxx  LexAPDL.cxx  LexASY.cxx  LexAU3.cxx  LexAVE.cxx  LexAVS.cxx  LexAbaqus.cxx  LexAda.cxx  LexAsciidoc.cxx  LexAsm.cxx  LexAsn1.cxx  LexBaan.cxx  LexBash.cxx  LexBasic.cxx  LexBatch.cxx  LexBibTeX.cxx  LexBullant.cxx  LexCIL.cxx  LexCLW.cxx  LexCOBOL.cxx  LexCPP.cxx  LexCSS.cxx  LexCaml.cxx  LexCmake.cxx  LexCoffeeScript.cxx  LexConf.cxx  LexCrontab.cxx  LexCsound.cxx  LexD.cxx  LexDMAP.cxx  LexDMIS.cxx  LexDart.cxx  LexDataflex.cxx  LexDiff.cxx  LexECL.cxx  LexEScript.cxx  LexEiffel.cxx  LexErlang.cxx  LexErrorList.cxx  LexFSharp.cxx  (+85 more)
linux-gtk-prototype/: CMakeLists.txt  FEATURES.md  Makefile  PORTING_PLAN.md  PluginHelpers.h  PluginInterface.h  README-linux.md  README.md  convert_icons.py  gtk-proto  main.cxx  main_fixed.cxx  main_gui.cxx  main_gui_old.cxx  notepad++.sh  npp_gtk.h  npp_icon.xpm
plugins/: README.md
plugins/HelloWorld/: HelloWorld.cpp  Makefile
scintilla/: scintilla558.tgz
scintilla/include/: Sci_Position.h  ScintillaTypes.h  ScintillaWidget.h
